// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox checked 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-kn3wr0=""
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <div
        aria-checked={true}
        data-css-1vvay1p=""
        role="checkbox"
        tabIndex="0"
      >
        <svg
          aria-label="Checkmark"
          data-css-a3uikz=""
          role="img"
          version="1.1"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
          />
        </svg>
      </div>
      <input
        checked={true}
        data-css-gyrv08=""
        name="colorRed"
        readOnly={true}
        tabIndex="-1"
        type="checkbox"
        value="red"
      />
      <div
        data-css-pgc406=""
      >
        Red
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-kn3wr0=""
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <div
        aria-checked={false}
        data-css-14w6mk2=""
        role="checkbox"
        tabIndex="0"
      />
      <input
        checked={false}
        data-css-gyrv08=""
        name="colorRed"
        readOnly={true}
        tabIndex="-1"
        type="checkbox"
        value="red"
      />
      <div
        data-css-pgc406=""
      >
        Red
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox disabled 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-1gz58lp=""
      onClick={null}
      onKeyDown={null}
    >
      <div
        aria-checked={false}
        data-css-4f5v7u=""
        role="checkbox"
        tabIndex="-1"
      />
      <input
        checked={false}
        data-css-gyrv08=""
        name="colorRed"
        readOnly={true}
        tabIndex="-1"
        type="checkbox"
        value="red"
      />
      <div
        data-css-pgc406=""
      >
        Red
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox error 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div>
      <label
        data-css-kn3wr0=""
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-checked={true}
          data-css-16dprvt=""
          role="checkbox"
          tabIndex="0"
        >
          <svg
            aria-label="Checkmark"
            data-css-a3uikz=""
            role="img"
            version="1.1"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
            />
          </svg>
        </div>
        <input
          checked={true}
          data-css-gyrv08=""
          name="colorRed"
          readOnly={true}
          tabIndex="-1"
          type="checkbox"
          value="red"
        />
        <div
          data-css-pgc406=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-checked={false}
          data-css-1h6c3kx=""
          role="checkbox"
          tabIndex="0"
        />
        <input
          checked={false}
          data-css-gyrv08=""
          name="colorRed"
          readOnly={true}
          tabIndex="-1"
          type="checkbox"
          value="red"
        />
        <div
          data-css-pgc406=""
        >
          Red
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox state demo 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "color": "#555555",
          }
        }
      >
        Checked:
         
        
      </div>
      <label
        data-css-kn3wr0=""
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-checked={false}
          data-css-14w6mk2=""
          role="checkbox"
          tabIndex="0"
        />
        <input
          checked={false}
          data-css-gyrv08=""
          name="colorRed"
          readOnly={true}
          tabIndex="-1"
          type="checkbox"
          value="red"
        />
        <div
          data-css-pgc406=""
        >
          Red
        </div>
      </label>
      <label
        data-css-kn3wr0=""
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-checked={false}
          data-css-14w6mk2=""
          role="checkbox"
          tabIndex="0"
        />
        <input
          checked={false}
          data-css-gyrv08=""
          name="colorGreen"
          readOnly={true}
          tabIndex="-1"
          type="checkbox"
          value="green"
        />
        <div
          data-css-pgc406=""
        >
          Green
        </div>
      </label>
      <label
        data-css-kn3wr0=""
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-checked={false}
          data-css-14w6mk2=""
          role="checkbox"
          tabIndex="0"
        />
        <input
          checked={false}
          data-css-gyrv08=""
          name="colorBlue"
          readOnly={true}
          tabIndex="-1"
          type="checkbox"
          value="blue"
        />
        <div
          data-css-pgc406=""
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;
